# dimensional-accelerate

./: LICENSE  dimensional-accelerate.cabal
src/Numeric/Units/Dimensional/: Accelerate.hs
src/Numeric/Units/Dimensional/Accelerate/: Prelude.hs
test/Numeric/Units/Dimensional/: AccelerateSpec.hs
